--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph">
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/propertyAnimationFragment">
+
+    <fragment
+        android:id="@+id/propertyAnimationFragment"
+        android:name="com.efedaniel.animationsdemo.fragments.PropertyAnimationFragment"
+        android:label="PropertyAnimationFragment"
+        tools:layout="@layout/fragment_property_animation" />
 
 </navigation>
