--- a/app/src/main/res/values-night-v23/styles.xml
+++ b/app/src/main/res/values-night-v23/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="AppTheme" parent="GeneralAppTheme">
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
-
+    
 </resources>
