--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -29,6 +29,6 @@
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:fontFamily="@font/muli_bold"
-        tools:text="Blood Finder" />
+        tools:text="@string/property_animation" />
 
 </FrameLayout>
