Feature: customize nav drawer items

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            android:checkable="true"
+            app:itemBackground="@drawable/nav_background_color"
             app:headerLayout="@layout/nav_header"
             app:menu="@menu/nav_menu"/>
 
