--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/dashboard"
-        android:icon="@drawable/ic_hamburger"
-        android:title="@string/property_animation"/>
-    <item
-        android:id="@+id/dashboard2"
-        android:icon="@drawable/ic_hamburger"
-        android:title="@string/property_animation"/>
-    <item
-        android:id="@+id/dashboard3"
-        android:icon="@drawable/ic_hamburger"
-        android:title="@string/property_animation"/>
-    <item
-        android:id="@+id/dashboard4"
-        android:icon="@drawable/ic_hamburger"
-        android:title="@string/property_animation"/>
-    <item
-        android:id="@+id/dashboard5"
-        android:icon="@drawable/ic_hamburger"
-        android:title="@string/property_animation"/>
-    <item
-        android:id="@+id/dashboard6"
-        android:icon="@drawable/ic_hamburger"
-        android:title="@string/property_animation"/>
-    <item
-        android:id="@+id/settingsFragment"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings"/>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/propertyAnimationFragment"
+            android:icon="@drawable/ic_hamburger"
+            android:title="@string/property_animation"/>
+        <item
+            android:id="@+id/dashboard2"
+            android:icon="@drawable/ic_hamburger"
+            android:title="@string/property_animation"/>
+        <item
+            android:id="@+id/dashboard3"
+            android:icon="@drawable/ic_hamburger"
+            android:title="@string/property_animation"/>
+        <item
+            android:id="@+id/dashboard4"
+            android:icon="@drawable/ic_hamburger"
+            android:title="@string/property_animation"/>
+        <item
+            android:id="@+id/dashboard5"
+            android:icon="@drawable/ic_hamburger"
+            android:title="@string/property_animation"/>
+        <item
+            android:id="@+id/dashboard6"
+            android:icon="@drawable/ic_hamburger"
+            android:title="@string/property_animation"/>
+        <item
+            android:id="@+id/settingsFragment"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/settings"/>
+    </group>
 </menu>
