--- a/app/src/main/res/layout/fragment_property_animation.xml
+++ b/app/src/main/res/layout/fragment_property_animation.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.PropertyAnimationFragment">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/in_progress_check_back_shortly"
-            android:textSize="18sp"
+        <ImageView
+            android:id="@+id/targetImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_steering_wheel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
