--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
-    android:background="?colorPrimary">
+    android:background="?colorPrimary"
+    android:elevation="4dp">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
