--- a/app/src/main/res/menu/property_menu.xml
+++ b/app/src/main/res/menu/property_menu.xml
@@ -23,4 +23,14 @@
                 app:showAsAction="never" />
         </menu>
     </item>
+    <item
+        android:id="@+id/set"
+        android:title="@string/animation_set">
+        <menu>
+            <item
+                android:id="@+id/flip_and_switch"
+                android:title="@string/flip_and_switch"
+                app:showAsAction="never" />
+        </menu>
+    </item>
 </menu>
